--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Deshrit Baral
 email: deshritbaral@gmail.com
 baseurl: ""
-url: "https://deshrit.github.io"
+url: "https://deshritbaral.com.np"
 linkedin_username: deshrit
 github_username:  deshrit
 youtube_username: "@deshrit"
@@ -14,6 +14,9 @@ plugins:
 header_pages:
   - home.md
   - blog.md
+
+google_analytics:
+  id: G-CMDTH72TR2
 
 exclude:
   - .sass-cache/
